# 2024-09-30

./: CMakeLists.txt  CMakePresets.json  README.rst  install_vcpkg.ps1  setEnvironmentVariables.ps1  vcpkg-configuration.json  x64-windows-gcc.cmake
embedded/: CMakeLists.txt
embedded-nonvirtual-polymorphic-objects/programs/: CMakeLists.txt
embedded-nonvirtual-polymorphic-objects/tests/: CMakeLists.txt  can-sink-suite.cpp  raw-mem-sensor.cpp
embedded-nonvirtual-polymorphic-objects/toolcase/base/: CMakeLists.txt  DataSinkAlternative.h  DataSinkObjectAlternative.h  random-sensor.cpp  raw-mem-sensor.cpp
embedded-nonvirtual-polymorphic-objects/toolcase/can/: CanCoutPeriph.cpp  CanCoutPeriph.h  SocketCANPeriph.cpp
embedded-nonvirtual-polymorphic-pointers/programs/: CMakeLists.txt  can-thermometer-firmware.cpp
embedded-nonvirtual-polymorphic-pointers/tests/: CMakeLists.txt  sensor-reader-suite.cpp  tmpdir-fixture.cpp  tmpdir-fixture.h
embedded-nonvirtual-polymorphic-pointers/toolcase/base/: CMakeLists.txt  CompositeSink.h  CoutSink.h  DataSinkPointerAlternative.h  random-sensor.h  sensor-reader.h  test-sensor.h
embedded-nonvirtual-polymorphic-pointers/toolcase/can/: CMakeLists.txt  CanDataSink.h  SocketCANPeriph.h  frame.h
embedded/programs/: can-thermometer-firmware.cpp
embedded/tests/: CMakeLists.txt  can-sink-suite.cpp  file-sensor-suite.cpp  sensor-reader-suite.cpp
embedded/toolcase/base/: CMakeLists.txt  CoutSink.h  DataSinkAlternative.h  IDataSink.h  file-sensor.cpp  file-sensor.h  sensor-reader.h  test-sensor.h
embedded/toolcase/can/: CMakeLists.txt  CanCoutPeriph.h  CanDataSink.cpp  CanDataSink.h  ICan.h  SocketCANPeriph.cpp  SocketCANPeriph.h
livehacking/: CMakeLists.txt  c-container.c  chrono.cpp  default-init.cpp  expected.cpp  explicit.cpp  file-io.cpp  inheritance.cpp  int-ctor.cpp  intro.cpp  intro.py  l-r-value.cpp  lambda.cpp  overloading.cpp  point-const-members.cpp  point-default-init.cpp  point.cpp  pwm.cpp  range-based-for.cpp  range-based-for.py  references.cpp  return-reference.cpp  slicing.cpp  smart-pointers.cpp  string.cpp  variant.cpp  vector-brace-init-ambiguous.cpp  vector.cpp
livehacking/toolchain/: CMakeLists.txt  Makefile  bye.c  bye.h  greet.c  greet.h  hello-suesser.c  hello-world.c
programs/: CMakeLists.txt  can-thermometer-firmware.cpp  conf-hwmon2-cout-manual-proto.cpp  conf-hwmon2-csv.cpp  config-hwmon2-cout--manual-confproto.cpp  config-hwmon2-cout.conf  config-hwmon2-csv.conf  sensor-can.cpp  thermometer-firmware-confgen.py  thermometer-firmware-extern.cpp  thermometer-firmware.cpp  using-the-container.cpp
tests/: CMakeLists.txt  can-sink-suite.cpp  file-sensor-suite.cpp  is-c++17-available.cpp  raw-mem-sensor.cpp  some-first-test.cpp  tmpdir-fixture.cpp
toolcase/: CMakeLists.txt
toolcase/base/: CMakeLists.txt  CanCoutPeriph.cpp  CanCoutPeriph.h  CanDataSink.cpp  CanDataSink.h  CompositeSink.h  CoutDataSink.h  CoutSink.h  CsvSink.h  ICan.h  IDataSink.h  ISensor.h  container.cpp  container.h  file-sensor.cpp  file-sensor.h  plat.h  raw-mem-sensor.cpp  raw-mem-sensor.h  sensor-reader.h  sensor.h  test-sensor.h
toolcase/can/: CMakeLists.txt  CanCoutPeriph.cpp  CanCoutPeriph.h  CanDataSink.cpp  CanDataSink.h  ICan.h  SocketCANPeriph.h
